--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==0.12.1
-Flask_SocketIO==2.8.6
-Flask-SQLAlchemy==2.1
-Wekzeug==0.12.1
+geopy==1.11.0
+gunicorn==19.7.1
+requests==2.13.0
+twilio==6.0.0
+Werkzeug==0.12.1
