Updated database connection methods

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==0.12.1
 Flask_SocketIO==2.8.6
-Flask-SQLAlchemy==2.1
+Flask-SQLAlchemy==2.2
 gunicorn==19.7.1
 psycopg2==2.7
+SQLAlchemy==1.1.9
 Werkzeug==0.12.1
